Funcionalidade de buscar cliente p/ filtro